chore: update dependencies and enhance test container management